# libriscv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
include/: demo.h  instrs.h  libriscv.h  opcodes.h  opmap.h
src/: CMakeLists.txt  decoders.cpp  lib.cpp
tests/: CMakeLists.txt  hello.cpp
utils/: CMakeLists.txt  tablegen.cpp  tables.cfg
